@@ -362,6 +362,7 @@ function initModules(pCallBack){
                 lNames               = {};
                 lNames[lStorage + '_dropbox'] = 'DropBox',
                 lNames[lStorage + '_github' ] = 'GitHub',
+                lNames[lStorage + '_gdrive' ] = 'GDrive',
             
             lDisableMenuFunc();
             
