@@ -49,23 +49,32 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             
             // define the elements of the menu
             items: {
-                view: {name: 'View', callback: function(key, opt){
-                   showEditor(true);
-                }},
+                view: {
+                    name        : 'View',
+                    callback    : function(key, opt){
+                        showEditor(true);
+                    }                
+                },
                 
-                edit: {name: 'Edit', callback: function(key, opt){
-                    showEditor();
-                }},
+                edit: {
+                    name        : 'Edit',
+                    callback    : function(key, opt){
+                        showEditor();
+                    }                
+                },
                 
-                delete: {name: 'Delete',
+                delete: {
+                    name: 'Delete',
                     callback: function(key, opt){
                         DOM.promptRemoveCurrent();
-                }},
+                    }                
+                },
                 
                 upload: {
-                    name: "Upload to",
+                    name: 'Upload to',
                     items: {
-                        'upload_to_gist': {name: 'Gist',
+                        'gist': {
+                            name: 'Gist',
                             callback: function(key, opt){
                                 var lCurrent    = DOM.getCurrentFile(), 
                                     lPath       = DOM.getCurrentPath(),
@@ -93,42 +102,81 @@ var CloudCommander, Util, DOM, CloudFunc, $;
                                 Util.log('Uploading to gist...');
                             }
                         },
-                    },
-                },
-                download: {name: 'Download',callback: function(key, opt){
-                    DOM.Images.showLoad();
-                    
-                    var lCurrent    = DOM.getCurrentFile(),
-                        lLink       = DOM.getByTag('a', lCurrent)[0].href;
-                    
-                    console.log('downloading file ' + lLink +'...');
-                    
-                    lLink = lLink + '?download';
-                                        
-                    lLink = Util.removeStr( lLink, CloudFunc.NOJS );
-                    var lId = DOM.getIdBySrc(lLink);
-                    
-                    if(!DOM.getById(lId)){
-                        var lDownload = DOM.anyload({
-                            name        : 'iframe',
-                            async       : false,
-                            className   : 'hidden',
-                            src         : lLink,
-                            func        : function(){
-                                DOM.Images.hideLoad();
-                            }
-                        });
                         
-                        DOM.Images.hideLoad();
-                        setTimeout(function() {
-                            document.body.removeChild(lDownload);
-                        }, 10000);
+                        'gdrive': {
+                            name: 'GDrive',
+                            
+                            callback: function(key, opt){
+                                    
+                                
+                                var lCurrent    = DOM.getCurrentFile(),
+                                    lPath       = DOM.getCurrentPath(),
+                                    lName       = DOM.getCurrentName(lCurrent);
+                                    
+                                DOM.ajax({
+                                    url     : lPath,
+                                    error   : DOM.Images.showError,
+                                    success : function(data, textStatus, jqXHR){
+                                        if( Util.isObject(data) )
+                                            data = JSON.stringify(data, null, 4);
+                                        var lData = {
+                                                data: data,
+                                                name: lName
+                                            };
+                                            
+                                        var lGDrive = cloudcmd.GDrive;
+                                        
+                                        if('init' in lGDrive)
+                                            lGDrive.init(lData);
+                                        else
+                                            Util.exec(cloudcmd.GDrive, lData);
+                                        }
+                                    });
+                                
+                                    Util.log('Uploading to gdrive...');
+                                }
+                            }
+                        }
+                },
+                
+                
+                download: {
+                    name: 'Download',
+                    callback: function(key, opt){
+                        DOM.Images.showLoad();
+                        
+                        var lCurrent    = DOM.getCurrentFile(),
+                            lLink       = DOM.getByTag('a', lCurrent)[0].href;
+                        
+                        console.log('downloading file ' + lLink +'...');
+                        
+                        lLink = lLink + '?download';
+                                            
+                        lLink = Util.removeStr( lLink, CloudFunc.NOJS );
+                        var lId = DOM.getIdBySrc(lLink);
+                        
+                        if(!DOM.getById(lId)){
+                            var lDownload = DOM.anyload({
+                                name        : 'iframe',
+                                async       : false,
+                                className   : 'hidden',
+                                src         : lLink,
+                                func        : function(){
+                                    DOM.Images.hideLoad();
+                                }
+                            });
+                            
+                            DOM.Images.hideLoad();
+                            setTimeout(function() {
+                                document.body.removeChild(lDownload);
+                            }, 10000);
+                        }
+                        else                    
+                            DOM.Images.showError({
+                                responseText: 'Error: You trying to' + 
+                                    'download same file to often'});
                     }
-                    else                    
-                        DOM.Images.showError({
-                            responseText: 'Error: You trying to' + 
-                                'download same file to often'});
-                }}
+                }
             }
         };
     }
