@@ -291,6 +291,32 @@ var Util, exports;
     };
     
     /**
+     * set timout before callback would be called
+     * @param pArgs {func, callback, time}
+     */    
+    Util.setTimeout             = function(pArgs){
+        var lDone,
+            lFunc       = pArgs.func,
+            lTime       = pArgs.time || 1000,
+            lCallBack   = function(pArgument){
+                if(!lDone){
+                    lDone = Util.exec(pArgs.callback, pArgument);
+                }
+            };
+        
+        var lTimeoutFunc = function(){
+            setTimeout(function(){
+                Util.exec(lFunc, lCallBack);
+                if(!lDone)
+                    lTimeoutFunc();
+            }, lTime);
+        };
+        
+        lTimeoutFunc();
+    };
+    
+    
+    /**
      * function execute param function in
      * try...catch block
      * 
